EJB WORKS